--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,17 @@
         <div class="login-form">
             <form method="POST" action="">
                 <div class="form-group">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                                <div class="alert alert-{{ category }}">
+                                {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}                                    
+                </div> 
+                <div class="form-group">
                     <label>User Name</label>
                     <input type="text" class="form-control" placeholder="User Name">
                 </div>
