--- a/templates/login.html
+++ b/templates/login.html
@@ -31,12 +31,16 @@
                     {% endwith %}                                    
                 </div> 
                 <div class="form-group">
-                    <label>User Name</label>
-                    <input type="text" class="form-control" placeholder="User Name">
+                    <label>Email</label>
+                    {% if invalidField %}                    
+                        <input value="{{invalidField['email']}}" name="email" type="text" class="form-control" placeholder="Email">
+                    {% else %}
+                        <input value="{{invalidField['email']}}" name="email" type="text" class="form-control" placeholder="Email">
+                    {% endif %}
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" class="form-control" placeholder="Password">
+                    <input name="password" type="password" class="form-control" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-black">Login</button>
                 <a href="{{url_for('register_page')}}" class="btn btn-secondary">Register</a>
