Half of Session is done.

--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 {% block style %}
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'register.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'account.css')}}">
 {% endblock style %}
 
 
@@ -63,8 +63,6 @@
             </div>
         </div>
     </main>
-
-
 
 {% endblock content %}
 
