--- a/templates/account.html
+++ b/templates/account.html
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link text-dark bg-light">
+                <a href="{{url_for('logout_page')}}" class="nav-link text-dark bg-light">
                     <i class="fas fa-sign-out-alt mr-3 text-primary fa-fw"></i>
                     Log out
                 </a>
