--- a/templates/account.html
+++ b/templates/account.html
@@ -22,13 +22,13 @@
     
         <ul class="nav flex-column bg-white mb-0">
             <li class="nav-item">
-                <a href="#" class="nav-link text-dark bg-light">
+                <a href="{{url_for('account_page')}}" class="nav-link text-dark bg-light">
                     <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>
                     My list
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link text-dark bg-light">
+                <a href="{{url_for('account_settings_page')}}" class="nav-link text-dark bg-light">
                     <i class="fas fa-user-cog mr-3 text-primary fa-fw"></i>
                     Settings
                 </a>
@@ -42,52 +42,69 @@
         </ul>
     </div>
 
-    <div class="page-content p-5" id="content">
-        <!-- Toggle button -->
-        <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle</small></button>
-    
-        <!-- Demo content -->
-        <h2 class="display-4 text-white">Bootstrap vertical nav</h2>
-        <p class="lead text-white mb-0">Build a fixed sidebar using Bootstrap 4 vertical navigation and media objects.</p>
-        <p class="lead text-white">Snippet by <a href="https://bootstrapious.com/snippets" class="text-white">
-            <u>Bootstrapious</u></a>
-        </p>
-        <div class="separator"></div>
-        <div class="row text-white">
-        <div class="col-lg-7">
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor.
-            </p>
-            <div class="bg-white p-5 rounded my-5 shadow-sm">
-            <p class="lead font-italic mb-0 text-muted">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+        <div class="page-content p-5" id="content">
+            <h2 class="display-4 text-dark pb-4">{{title}}</h2>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}">
+                        {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}  
+            <div class="col pb-5">
+                {% if settings %}
+                    <form method="POST" action="" class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="account-fn">First Name</label>
+                                <input name="name" value="{{user.name}}" class="form-control" type="text">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="account-ln">Surname</label>
+                                <input name="surname"  value="{{user.surname}}" class="form-control" type="text">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="account-email">E-mail Address</label>
+                                <input disabled name="email"  value="{{user.email}}" class="form-control" type="email">
+                            </div>
+                        </div>                    
+                        <div class="col-md-6">                
+                            <div class="form-group">
+                                <label for="account-pass">New Password</label>
+                                <input name="password"  class="form-control" type="password">
+                                <small class="text-muted">If you don't want to change password, don't type anything.</small>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="account-confirm-pass">Confirm New Password</label>
+                                <input name="confirm_password"  class="form-control" type="password" id="account-confirm-pass">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <hr class="mt-2 mb-3">
+                            <div class="d-flex justify-content-end align-items-center">
+                                <label class="pt-1">To update profile, type your current password: </label>
+                                <input name="current_password"  class="form-control col-3 mr-3 ml-3" type="password" placeholder="Current password">
+                                <button class="btn btn-style-1 btn-primary" type="submit">Update Profile</button>
+                            </div>
+                        </div>
+                    </form>
+                {% else %}
+
+                {% endif %}
             </div>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor.
-            </p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor.
-            </p>
         </div>
-        <div class="col-lg-5">
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor.
-            </p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor.
-            </p>
-        </div>
-        </div>
+
+
     
-    </div>
 
 {% endblock content %}
 
